# git-repo-summarizer

./: README.md  github_client.py  llm.py  main.py  pyproject.toml  requirements.md  routes.py  schemas.py
src/: github_client.py  llm.py  main.py  routes.py  schemas.py  streamlit_app.py
tests/: test_github.py  test_llm.py
